adding a sample for android; updating the README instructions

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'HelloWorldRN'
+include ':rct-fh'
+project(':rct-fh').projectDir = new File(rootProject.projectDir, '../node_modules/rct-fh/android')
 
 include ':app'
