--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-	"name": "hello-world-rn",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "react-native start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"rct-fh": "^0.0.14",
-		"react": "~15.4.1",
-		"react-native": "0.42.3"
-	},
-	"devDependencies": {
-		"babel-jest": "19.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "19.0.2",
-		"react-test-renderer": "~15.4.1"
-	},
-	"jest": {
-		"preset": "react-native"
-	},
-	"engines": {
-		"node": ">=6.0.0"
-	}
+  "name": "hello-world-rn",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "react-native start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "rct-fh": "git+https://github.com/rafaeltuelho/RCTFH.git",
+    "react": "^16.0.0-alpha.12",
+    "react-native": "^0.48.2"
+  },
+  "devDependencies": {
+    "babel-jest": "19.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "jest": "19.0.2",
+    "react-test-renderer": "16.0.0-alpha.12"
+  },
+  "jest": {
+    "preset": "react-native"
+  },
+  "engines": {
+    "node": ">=6.0.0"
+  }
 }
