changing some ios stuff

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,11 @@ buck-out/
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
+
+####
+# CocoaPods
+Pods/
+!Podfile
+!Podfile.lock
+
+*.ori
