--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,7 @@
 source 'https://github.com/CocoaPods/Specs.git'
 project 'HelloWorldRN.xcodeproj'
 platform :ios, '8.0'
-use_frameworks!
+#use_frameworks!
 target 'HelloWorldRN' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
