--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "rct-fh": "git+https://github.com/rafaeltuelho/RCTFH.git",
-    "react": "^16.0.0-alpha.12",
+    "react": "16.0.0-alpha.12",
     "react-native": "^0.48.2"
   },
   "devDependencies": {
